# icloud_photos_downloader

./: .codeclimate.yml  .dockerignore  .gitignore  .pytest.ini  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.build-doc  Dockerfile.build-musl  Dockerfile.build-simple  Dockerfile.build_musl  Dockerfile.cache_extract  Dockerfile.cache_inject  Dockerfile.dummy  Dockerfile.github  Dockerfile.local  Dockerfile.pre_build  Dockerfile.release  EXPERIMENTAL.md  FAQ.md  FUNCTIONAL_REFACTORING_CONTEXT.md  LICENSE  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  README.mdc  README_AUR.md  README_DOCKER.md  README_NPM.md  README_PYPI.md  REFACTORING_CONTEXT.md  REFACTORING_PLAN.md  authentication.py  comp.md  cron_script.sh.example  download_photos.py  (+18 more)
.devcontainer/: devcontainer.json
.devcontainer/node/: devcontainer.json
.devcontainer/python/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  generic.md
.github/workflows/: build-docs.yml  build-package.yml  codeql-analysis.yml  compile-notes.yml  create-release.yml  createrelease.yml  docker-build.yml  docs-checks.yml  docs.yml  extract-changelog.yml  patch-version.yml  produce-artifacts.yml  promote-snap-candidate-to-stable.yaml  publish-docs.yml  publish.yml  quality-checks.yml  refresh-docs.yml  rizqshops@googlegroups.com  test.yml  tox.yml
binary_dist/: pyproject.toml
binary_dist/src/icloud/: __main__.py
binary_dist/src/icloudpd/: __main__.py
docker/: Dockerfile
docs/: authentication.md  conf.py  index.md  index.rst  install.md  mode.md  naming.md  nas.md  plugins.md  raw.md  reference.md  size.md  webui.md
docs/raw/: raw.rst
docs/size/: size.rst
examples/: cron_script.sh.example
icloud_photos/: authentication.py  fib.py
icloudpd/: authentication.py  autodelete.py  base.py  constants.py  convert.py  counter.py  download.py  email_notifications.py  exif_datetime.py  logger.py  notifications.py  paths.py  string_helpers.py  truncate_middle.py
jq/: version.jq
npm/icloudpd/: README.md  package.json  preinstall.js
plugins/immich/: README.md  __init__.py  immich.py
pyicloud_ipd/: base.py  cmdline.py  exceptions.py  utils.py
pyicloud_ipd/services/: __init__.py  account.py  contacts.py  photos.py
scripts/: build  build_apt_install  build_bin1  build_bin2  build_bin_linux  build_bin_linux_static  build_bin_macos  build_bin_windows  build_binary_dist_linux  build_binary_dist_linux_add_musl  build_binary_dist_macos  build_binary_dist_windows  build_docker  build_docker_local  build_npm  build_static  build_whl  clean  clone_whl_version  compile_compatibility  compile_compatibility.py  compile_matrix.py  compile_tzlc.py  extract_releasenotes  format  get_version  has_source  install_deps  lint  npx_optional  patch_version  publish_npm  publish_pypi  release  release_docker  run_all_checks  test  test_python_versions.sh  type_check  unpublish_npm
snap/: snapcraft.yaml
src/: icloudpd.py
src/foundation/: __init__.py  http.py  json.py  predicates.py  string.py  string_utils.py
src/icloudpd/: authentication.py  autodelete.py  base.py  cli.py  config.py  constants.py  counter.py  download.py  email_notifications.py  exif_datetime.py  file_cache.py  filename_policies.py  log_level.py  logger.py  metadata_management.py  mfa_provider.py  notifier.py  ntfy.py  password_provider.py  paths.py  progress.py  script_notifier.py  server.py  status.py  string_helpers.py  summary.py  telegram_bot.py  xmp_sidecar.py
src/pyicloud_ipd/: __init__.py  asset_version.py  base.py  cmdline.py  exceptions.py  file_match.py  item_type.py  live_photo_mov_filename_policy.py  password_provider.py  raw_policy.py  response_types.py  session.py  sms.py  utils.py  version_size.py
src/starters/: icloudpd.py  icloudpd_ex.py  ipd.py
tests/: test_authentication.py  test_autodelete_photos.py  test_cli.py  test_download_live_photos.py  test_download_live_photos_id.py  test_download_photos.py  test_download_photos_id.py  test_download_videos.py  test_email_notifications.py  test_fib.py  test_filenames.py  test_folder_structure.py  test_health_check.py  test_heic_convert.py  test_http.py  test_issue_1220_only_print_filenames_dedup_bug.py  test_json_rules.py  test_keep_icloud_mode.py  test_key_error.py  test_listing_albums.py  test_listing_libraries.py  test_listing_recent_photos.py  test_logger.py  test_metadata_management.py  test_photo_library.py  test_plugins.py  test_session_connection_errors.py  test_string_helpers.py  test_summary.py  test_truncate_middle.py  test_two_step_auth.py  test_xmp_sidecar.py
tests/cookie/: jdoegmailcom  jdoegmailcom.session
tests/data/: key_error1.json  key_error2.json  parse_trusted_phone_numbers_payload_valid.html
tests/helpers/: __init__.py  print_result_exception.py
tests/vcr_cassettes/: 2fa_flow_invalid_code.yml  2fa_flow_valid_code.yml  2fa_flow_valid_code_zero_lead.yml  2sa_flow_failed_send_code.yml  2sa_flow_invalid_code.yml  2sa_flow_invalid_device.yml  2sa_flow_valid_code.yml  2sa_flow_valid_device.yml  2sa_flow_valid_sms.yml  auth_non_2fa.yml  auth_requires_2fa.yml  auth_requires_2sa.yml  autodelete_photos.yml  autodelete_photos_heic.yml  download_autodelete_photos.yml  download_autodelete_photos_internal_error.yml  download_autodelete_photos_part1.yml  download_autodelete_photos_part2.yml  download_autodelete_photos_retry.yml  download_one_heic_photo.yml  download_one_heic_photo_error.yml  failed_auth.yml  failed_auth_503.yml  fallback_raw_password.yml  listing_albums.yml  listing_albums_error.yml  listing_photos.yml  listing_photos_404.yml  listing_photos_4_recent_all.yml  listing_photos_bad_filename.yml  listing_photos_bad_filename_base64_encoding.yml  listing_photos_bad_filename_utf8_encoding.yml  listing_photos_bad_item_type.yml  listing_photos_chinese.yml  listing_photos_dedup.yml  listing_photos_fallback_to_original.yml  listing_photos_filename_string_encoding.yml  listing_photos_internal_error_download.yml  listing_photos_internal_error_download_name_id7.yml  (+25 more)
(+46 files in other folders)
