[build-system]
requires = [
    "setuptools==69.0.2",
    "wheel==0.42.0",
]
build-backend = "setuptools.build_meta"

[project]
version="1.17.3"
name = "icloudpd"
description = "icloudpd is a command-line tool to download photos and videos from iCloud."
readme = "README_PYPI.md"
requires-python = ">=3.8,<3.13"
keywords = ["icloud", "photo"]
license = {file="LICENSE.md"}
authors=[
    {name = "The iCloud Photo Downloader Authors"}
]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests==2.31.0",
    "schema==0.7.5",
    "click==8.1.6",
    "python-dateutil==2.8.2",
    "tqdm==4.66.0",
    "piexif==1.1.3",
    "urllib3==1.26.16",
    # from pyicloud_ipd
    "six==1.16.0",
    "tzlocal==4.3.1",
    "pytz==2022.7.1",
    "certifi==2022.12.7",
    "keyring==23.13.1",
    "keyrings-alt==4.2.0"
]

[project.optional-dependencies]
dev = [
    "twine==4.0.2",
    "pyinstaller==5.13.2",
    "wheel==0.42.0",
]
devlinux = [
    "auditwheel==5.4.0",
    #"staticx==0.14.1",
    "scons==4.6.0"
]
test = [
    "pytest==7.4.3",
    "mock==5.1.0",
    "freezegun==1.2.2",
    "vcrpy==4.4.0",
    "pytest-cov==4.1.0",
    "pylint==2.17.5",
    "coveralls==3.3.1",
    "autopep8==2.0.2",
    "pytest-timeout==2.1.0",
    "pytest-xdist==3.3.1",
    "mypy==1.7.0",
    "types-pytz==2022.7.1.2",
    "types-tzlocal==4.3.0.0",
    "types-requests==2.31.0.2",
    "types-six==1.16.0",
    "types-urllib3==1.26.16",
    "types-tqdm==4.66.0.1",
    "types-mock==5.1.0.1"
]

[project.urls]
Homepage="https://github.com/icloud-photos-downloader/icloud_photos_downloader"

[project.scripts]
icloudpd = "icloudpd.base:main"
icloud = "pyicloud_ipd.cmdline:main"

[tool.pytest.ini_options]
log_format = "%(levelname)-8s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
timeout = 300
testpaths = [
    "tests",
    "src" # needed for doctests    
]
pythonpath = [
    "src"
]
addopts = "--doctest-modules"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
exclude = ["starters"]

[[tool.mypy.overrides]]
module = ['piexif.*', 'vcr.*']
ignore_missing_imports = true
