[build-system]
requires = [
    "setuptools==80.9.0",
    "wheel==0.45.1",
]
build-backend = "setuptools.build_meta"

[project]
version="1.32.2"
name = "icloudpd"
description = "icloudpd is a command-line tool to download photos and videos from iCloud."
readme = "README_PYPI.md"
requires-python = ">=3.10,<3.14"
keywords = ["icloud", "photo"]
license = {file="LICENSE.md"}
authors=[
    {name = "The iCloud Photo Downloader Authors"}
]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests==2.32.3",
    "schema==0.7.7",
    "tqdm==4.67.1",
    "piexif==1.1.3",
    "urllib3==1.26.20",
    "typing_extensions==4.14.0",
    "Flask==3.1.1",
    "waitress==3.0.2",
    # from pyicloud_ipd
    "tzlocal==5.3.1",
    "pytz==2025.2",
    "certifi==2025.4.26",
    "keyring==25.6.0",
    "keyrings-alt==5.0.2",
    "srp==1.0.22",
]

[dependency-groups]
doc = [
    "furo==2024.8.6",
    "Sphinx==7.4.7",
    "sphinx-autobuild==2024.10.3",
    "myst-parser==3.0.1"
]
dev = [
    "twine==6.1.0",
    "pyinstaller==6.14.0",
    "wheel==0.45.1",
]
devlinux = [
    "auditwheel==6.4.0",
    #"staticx==0.14.1",
    "scons==4.9.1"
]
test = [
    "pytest==8.4.0",
    "mock==5.2.0",
    "freezegun==1.5.2",
    "vcrpy==7.0.0",
    "pytest-cov==6.2.1",
    "ruff==0.11.13",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.7.0",
    "mypy==1.16.0",
    "types-pytz==2025.2.0.20250516",
    "types-tzlocal==5.1.0.1",
    "types-requests==2.31.0.2",
    "types-urllib3==1.26.25.14",
    "types-tqdm==4.67.0.20250516",
    "types-mock==5.2.0.20250516",
    "types-waitress==3.0.1.20241117",
]

[project.urls]
Homepage="https://github.com/icloud-photos-downloader/icloud_photos_downloader"

[project.scripts]
icloudpd = "icloudpd.cli:cli"
icloud = "pyicloud_ipd.cmdline:main"

[tool.pytest.ini_options]
log_format = "%(levelname)-8s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
timeout = 300
testpaths = [
    "tests",
    "src" # needed for doctests    
]
pythonpath = [
    "src"
]
addopts = "--doctest-modules"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
exclude = ["starters"]

[[tool.mypy.overrides]]
module = ['piexif.*', 'vcr.*', 'srp.*']
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # long lines
    "E501",
    # lower case types
    "UP006",
    # deprecated typing namespace
    "UP035",
]

